add another site

--- a/test/index.html
+++ b/test/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gonni's Homepage</title>
+    <title>SlydD3rR's Homepage</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
     <div class="image">
-      <img alt="fem" src="./images/ff.webp" />
+      <img alt="fem" src="./images/aa.jpg" />
     </div>
     <nav>
-      <p class="HomeHeader_Title">Bienvenue Gonni !</p>
+      <p class="HomeHeader_Title">Bienvenue SlyD3rR !</p>
       <div class="HomeHeader_Time">
         <div class="hour" id="currentTime">
           <div class="time" id="currentTime"></div>
